--- a/package.json
+++ b/package.json
@@ -1,31 +1,29 @@
 {
-  "name": "my_package",
-  "version": "1.0.0",
-  "main": "gulpfile.js",
-  "description": "",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/monatheoctocat/my_package.git"
-  },
-  "keywords": [],
-  "author": "Nemtsev Konstantin",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/monatheoctocat/my_package/issues"
-  },
-  "homepage": "https://github.com/monatheoctocat/my_package",
   "devDependencies": {
-    "gulp": "^4.0.2"
-  },
-  "dependencies": {
-    "gulp-cssmin": "^0.2.0",
+    "autoprefixer": "10.4.0",
+    "browser-sync": "2.27.7",
+    "del": "6.0.0",
+    "gulp": "4.0.2",
+    "gulp-dart-sass": "^1.0.2",
     "gulp-htmlmin": "^5.0.1",
-    "gulp-rename": "^2.0.0",
-    "gulp-sass": "^5.1.0",
-    "gulp-uglify-es": "^3.0.0",
-    "sass": "^1.62.1"
-  }
+    "gulp-libsquoosh": "^1.0.12",
+    "gulp-plumber": "1.2.1",
+    "gulp-postcss": "9.0.1",
+    "gulp-rename": "2.0.0",
+    "gulp-replace": "^1.1.4",
+    "gulp-svgmin": "^4.1.0",
+    "gulp-terser": "2.1.0",
+    "postcss": "8.3.11",
+    "postcss-csso": "5.0.1",
+    "stylelint": "13.13.1",
+    "gulp-stacksvg": "^2.0.2"
+  },
+  "scripts": {
+    "build": "gulp build",
+    "start": "gulp"
+  },
+  "engines": {
+    "node": "16.13.0"
+  },
+  "type": "module"
 }
