--- a/package.json
+++ b/package.json
@@ -1,35 +1,61 @@
 {
-  "homepage": "https://nemtsev-k.github.io/test-work-1/",
+  "name": "rooms",
+  "author": "Nemtsev Konstantin <nemtsevk@hotmail.com> (https://github.com/nemtsev-k)",
+  "description": "Личный проект «Номера и цены»",
+  "homepage": "https://nemtsev-k.github.io/room/",
+  "repository": "https://github.com/nemtsev-k/room",
+  "private": true,
+  "type": "module",
   "devDependencies": {
-    "autoprefixer": "10.4.0",
-    "browser-sync": "2.27.7",
-    "del": "6.0.0",
+    "@htmlacademy/editorconfig-cli": "^3.0.0",
+    "autoprefixer": "^10.4.19",
+    "browser-sync": "^3.0.2",
     "gh-pages": "^6.1.1",
-    "gulp": "4.0.2",
-    "gulp-dart-sass": "^1.0.2",
+    "gulp": "^5.0.0",
+    "gulp-dart-sass": "^1.1.0",
     "gulp-htmlmin": "^5.0.1",
-    "gulp-libsquoosh": "^1.0.12",
-    "gulp-plumber": "1.2.1",
-    "gulp-postcss": "9.0.1",
-    "gulp-rename": "2.0.0",
+    "gulp-imagemin": "^9.1.0",
+    "gulp-plumber": "^1.2.1",
+    "gulp-postcss": "^10.0.0",
+    "gulp-rename": "^2.0.0",
     "gulp-replace": "^1.1.4",
-    "gulp-stacksvg": "^2.0.2",
     "gulp-svgmin": "^4.1.0",
-    "gulp-terser": "2.1.0",
-    "postcss": "8.3.11",
-    "postcss-csso": "5.0.1",
-    "stylelint": "13.13.1"
+    "gulp-terser": "^2.1.0",
+    "gulp-webp": "^5.0.0",
+    "postcss": "^8.4.38",
+    "postcss-csso": "^6.0.1",
+    "stylelint": "^16.5.0",
+    "stylelint-config-htmlacademy": "^4.2.1",
+    "stylelint-config-standard": "^36.0.1",
+    "stylelint-config-standard-scss": "^13.1.0",
+    "stylelint-scss": "^6.3.2"
   },
   "scripts": {
-    "build": "gulp build",
-    "start": "gulp",
+    "editorconfig": "editorconfig-cli",
+    "stylelint": "stylelint \"source/sass/**/*.scss\" scss",
+    "lint": "npm run editorconfig && npm run stylelint",
+    "build": "gulp buildProd",
+    "start": "gulp runDev",
+    "predeploy": "npm run build",
     "deploy": "gh-pages -d build"
   },
+  "browserslist": [
+    "last 2 versions",
+    "not dead",
+    "not op_mini all",
+    "not and_uc > 0",
+    "not < 0.2%"
+  ],
+  "editorconfig-cli": [
+    "*.json",
+    "*.js",
+    "source/**/*.html",
+    "source/js/**/*.js",
+    "source/images/**/*.svg",
+    "source/sass/**/*.scss"
+  ],
   "engines": {
-    "node": "16.20.2"
-  },
-  "type": "module",
-  "volta": {
-    "node": "16.20.2"
+    "node": "^20.14.0",
+    "npm": "^10.7.0"
   }
 }
