--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "rooms",
-  "author": "Nemtsev Konstantin <nemtsevk@hotmail.com> (https://github.com/nemtsev-k)",
+  "author": "Nemtsev Konstantin <nemtsevk@hotmail.com> (https://github.com/NemtsevK)",
   "description": "Личный проект «Номера и цены»",
-  "homepage": "https://nemtsev-k.github.io/room/",
-  "repository": "https://github.com/nemtsev-k/room",
+  "homepage": "https://nemtsevk.github.io/rooms/",
+  "repository": "https://github.com/NemtsevK/rooms",
   "private": true,
   "type": "module",
   "devDependencies": {
@@ -55,7 +55,7 @@
     "source/sass/**/*.scss"
   ],
   "engines": {
-    "node": "^20.14.0",
-    "npm": "^10.7.0"
+    "node": "^20.15.1",
+    "npm": "^10.8.2"
   }
 }
